--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.iot_android_project">
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,9 +12,6 @@
         android:theme="@style/AppTheme">
         <activity android:name=".join"></activity>
         <activity android:name=".login" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity android:name=".Dialog_a" />
         <activity
             android:name=".fragment1_1"
@@ -31,5 +29,5 @@
         </activity>
         <activity android:name=".MainActivity" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
