--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Chatting"></activity>
+        <activity android:name=".dialo2"></activity>
+        <activity android:name=".Chatting" />
         <activity android:name=".sub" />
         <activity android:name=".join" />
         <activity android:name=".login" />
