--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_main_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".write"
+        <activity android:name=".sub1"></activity>
+        <activity
+            android:name=".write"
             android:label="Good Care"
-            android:theme="@style/Theme"
             android:parentActivityName=".MainActivity"
-            ></activity>
+            android:theme="@style/Theme" />
         <activity android:name=".spinner_item" />
         <activity android:name=".dialo2" />
         <activity android:name=".Chatting" />
@@ -28,9 +29,8 @@
         <activity
             android:name=".fragment1_1"
             android:label="Good Care"
-            android:theme="@style/Theme"
             android:parentActivityName=".MainActivity"
-            />
+            android:theme="@style/Theme" />
         <activity
             android:name=".splash"
             android:screenOrientation="portrait"
